methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if (vuBiscuit() == true) {
    return true;
  } else {
    return false;
  }
}

for (compteur <- 1 to 6) {
  forward();
  if (haveBaggle() == true) {
    for (compteur <-1 to 6) {
      bacward();
    }
  } else {
    for (compteur <-1 to 6) {
      bacward();
    }
    right(), forward(); left();
  }  
}